# ml-ts-forecasting

./: .gitignore  LICENSE  README.md  december_2016_predictions.csv  main.py  mlflow_ui.py  predict.py  predict_december.py  pyproject.toml  train.py
configs/: config.yaml
data/: traffic.csv
mlruns/0/: meta.yaml
src/data/: data_module.py
src/models/: lstm_model.py
src/utils/: mlflow_utils.py  preprocessing.py
